--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="inner">
                 <h2><img src="resources/images/tit.png" alt=""></h2>
                 <ul>
-                    <li><a href="type_A/html/Main.html" target="blank"><img src="resources/images/typeA.png" alt=""></a></li>
-                    <li><a href="type_B/html/Main.html" target="blank"><img src="resources/images/typeB.png" alt=""></a></li>
+                    <li><a href="type_A/html/Main.html" target="_blank"><img src="resources/images/typeA.png" alt=""></a></li>
+                    <li><a href="type_B/html/Main.html" target="_blank"><img src="resources/images/typeB.png" alt=""></a></li>
                 </ul>
 
             </div>
