--- a/type_A/html/Main.html
+++ b/type_A/html/Main.html
@@ -60,7 +60,7 @@
                                     <li><a href="#">제품개요</a></li>
                                     <li><a href="#">솔루션</a></li>
                                     <li><a href="#">공정</a></li>
-                                    <li><a href="Product.html" target="blank">제품</a></li>
+                                    <li><a href="Product.html" target="_blank">제품</a></li>
                                 </ul>
                             </li>
                             <li>
