--- a/type_B/html/Main.html
+++ b/type_B/html/Main.html
@@ -42,7 +42,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -105,7 +105,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -168,7 +168,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -231,7 +231,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -294,7 +294,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -357,7 +357,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
