--- a/type_B/html/Product.html
+++ b/type_B/html/Product.html
@@ -41,7 +41,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -104,7 +104,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -167,7 +167,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -230,7 +230,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -293,7 +293,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -356,7 +356,7 @@
                                             <li><a href="#">제품개요</a></li>
                                             <li><a href="#">솔루션</a></li>
                                             <li><a href="#">공정</a></li>
-                                            <li><a href="Product.html" target="blank">제품</a></li>
+                                            <li><a href="Product.html" target="_blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
