--- a/type_A/html/Main.html
+++ b/type_A/html/Main.html
@@ -172,7 +172,10 @@
                         <span class="txt eng">SCROLL TO DISCOVER</span>
                         <span class="mouse"></span>
                     </div>
-                    <div class="visit"><img src="../resources/images/visit.png" alt=""></div>
+                    <div class="visit">
+                        <img src="../resources/images/visit.png" alt="">
+                        <p>내방등록</p>
+                    </div>
 
                     
                     <div class="swiper-scrollbar"></div>
