ceo 이미지 수정

--- a/type_B/html/Main.html
+++ b/type_B/html/Main.html
@@ -496,37 +496,37 @@
                     </div>
                     <ul>
                         <li class="cont_01">
-                            <div class="fl desc move left">
+                            <div class="fl desc left">
                                 <dl>
-                                    <dt class="move"><img src="../resources/images/main_product_cont_01_dt.png" alt=""></dt>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_01_dd_01.png" alt=""></dd>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_01_dd_02.png" alt=""></dd>
+                                    <dt class="left"><img src="../resources/images/main_product_cont_01_dt.png" alt=""></dt>
+                                    <dd class="left"><img src="../resources/images/main_product_cont_01_dd_01.png" alt=""></dd>
+                                    <dd class="left"><img src="../resources/images/main_product_cont_01_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="left"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
-                            <div class="fr visual move right"><img src="../resources/images/main_product_cont_01_vsl.png" alt=""></div>
+                            <div class="fr visual right"><img src="../resources/images/main_product_cont_01_vsl.png" alt=""></div>
                         </li>
                         <li class="cont_02">
-                            <div class="fl visual move left"><img src="../resources/images/main_product_cont_02_vsl.png" alt=""></div>
-                            <div class="fr desc move right">
+                            <div class="fl visual left"><img src="../resources/images/main_product_cont_02_vsl.png" alt=""></div>
+                            <div class="fr desc">
                                 <dl>
-                                    <dt class="move"><img src="../resources/images/main_product_cont_02_dt.png" alt=""></dt>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_02_dd_01.png" alt=""></dd>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_02_dd_02.png" alt=""></dd>
+                                    <dt class="right"><img src="../resources/images/main_product_cont_02_dt.png" alt=""></dt>
+                                    <dd class="right"><img src="../resources/images/main_product_cont_02_dd_01.png" alt=""></dd>
+                                    <dd class="right"><img src="../resources/images/main_product_cont_02_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="right"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
                         </li>
                         <li class="cont_03">
-                            <div class="fl desc move left">
+                            <div class="fl desc">
                                 <dl>
-                                    <dt class="move"><img src="../resources/images/main_product_cont_03_dt.png" alt=""></dt>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_03_dd_01.png" alt=""></dd>
-                                    <dd class="move"><img src="../resources/images/main_product_cont_03_dd_02.png" alt=""></dd>
+                                    <dt class="left"><img src="../resources/images/main_product_cont_03_dt.png" alt=""></dt>
+                                    <dd class="left"><img src="../resources/images/main_product_cont_03_dd_01.png" alt=""></dd>
+                                    <dd class="left"><img src="../resources/images/main_product_cont_03_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="left"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
-                            <div class="fr visual move right"><img src="../resources/images/main_product_cont_03_vsl.png" alt=""></div>
+                            <div class="fr visual right"><img src="../resources/images/main_product_cont_03_vsl.png" alt=""></div>
                         </li>
                     </ul>
                 </div>
